--- a/src/Navbar/Navbar.module.css
+++ b/src/Navbar/Navbar.module.css
@@ -6,11 +6,20 @@
 }
 
 .item {
-    color: red;
     font-weight: bold;
     padding: 10px;
     font-family: 'Neucha', cursive;
     font-size: 20px;
-    
+
 }
 
+.item a:hover {
+    color: blue;
+
+}
+
+a {
+    text-decoration: none;
+    color: red;
+
+}
