--- a/src/Navbar/Navbar.module.css
+++ b/src/Navbar/Navbar.module.css
@@ -5,7 +5,7 @@
     padding: 30px;
 }
 
-.item {
+.item div {
     font-weight: bold;
     padding: 10px;
     font-family: 'Neucha', cursive;
@@ -18,7 +18,7 @@
 
 }
 
-a {
+.item a {
     text-decoration: none;
     color: red;
 
